--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,28 @@
+# title: "Jekyll Bootstrap Starter" # the name of your site, e.g. ACME Corp.
+# tagline: "An awesome tagline"
+# email: your.email@gmail.com
+# description: >- # this means to ignore newlines until "baseurl:"
+#  Add description here
+# author: name
+# url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# baseurl: "" # the subpath of your site, e.g. /blog
+# google_analytics: UA-111111111-1
+# twitter:
+#   username: 
+#   card: summary #keep this to generate a twitter share card
+  
 defaults:
   - scope:
       path: ""
     values:
       layout: "default"    
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag      
